--- a/crackcode/index.html
+++ b/crackcode/index.html
@@ -18,7 +18,7 @@
           alt="cartoon character in dark rimmed glasses"
         />
         <div class="brand-copy">
-          <h1>CRACK CODE<span>javascript boilerplate</span></h1>
+          <h1>CRACK CODES<span>javascript boilerplate</span></h1>
         </div>
       </div>
 
