--- a/crackcode/index.html
+++ b/crackcode/index.html
@@ -15,10 +15,11 @@
         <img
           class="brand-image"
           src="img/ui/crack-code-logo.svg"
-          alt="cartoon character in dark rimmed glasses"
+          alt="cartoon character in dark rimmed glasses logo"
         />
         <div class="brand-copy">
           <h1>CRACK CODES<span>javascript boilerplate</span></h1>
+          <div>Hello world!</div>
         </div>
       </div>
 
@@ -26,7 +27,7 @@
         <ul>
          
           <li class="icon icon-md">
-            <img src="img/icons/user.svg" alt="user profile" />
+            <img src="img/icons/user.svg" alt="USER_PROFILE" />
           </li>
         </ul>
       </div>
