--- a/crackcode/index.html
+++ b/crackcode/index.html
@@ -18,7 +18,7 @@
           alt="cartoon character in dark rimmed glasses logo"
         />
         <div class="brand-copy">
-          <h1>CRACK CODES<span>javascript boilerplate</span></h1>
+          <h1>CRACK CODES<span>javascript boilerplatesssssss</span></h1>
           <div>Hello world!</div>
         </div>
       </div>
