--- a/crackcode/index.html
+++ b/crackcode/index.html
@@ -25,10 +25,10 @@
 
       <div class="user-options">
         <ul>
-         
-          <li class="icon icon-md">
+          <li>lalalal</li>
+          < class="icon icon-md">
             <img src="img/icons/user.svg" alt="USER_PROFILE" />
-          </li>
+          </>
         </ul>
       </div>
     </header>
